--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,6 @@ Version: 0.1
 Date: 2016-02-24
 Author: Tom Wilson <tpw2@aber.ac.uk>
 Maintainer: Tom Wilson <tpw2@aber.ac.uk>
-Description: More about what it does (maybe more than one line)
+Description: Utilise C++ bindings to the the Thermo MSFileReader.dll to access .RAW files in R
 License: GPL (>= 2)
 LazyData: TRUE
