--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,5 +6,7 @@ Date: 2016-02-24
 Author: Tom Wilson <tpw2@aber.ac.uk>
 Maintainer: Tom Wilson <tpw2@aber.ac.uk>
 Description: Utilise C++ bindings to the the Thermo MSFileReader.dll to access .RAW files in R
-License: GPL (>= 2)
+License: GPL (>= 3)
+URL: https://github.com/wilsontom/rawReadeR
+BugReports: https://github.com/wilsontom/rawReadeR/issues
 LazyData: TRUE
