--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Version: 0.1
 Date: 2016-02-24
 Author: Tom Wilson <tpw2@aber.ac.uk>
 Maintainer: Tom Wilson <tpw2@aber.ac.uk>
-Description: Utilise C++ bindings to the the Thermo MSFileReader.dll to
-    access .RAW files in R
+Description: A series of C++ functions are used to access functions within the Thermo MSFileReader.dll. Each C++ function is desgined for single file and single scan input. Corresponding R functions and shell call are used as multi scan and multi file wrappers to the C++ functions, via the pre-compiled binary executables. 
 License: GPL (>= 3)
 URL: https://github.com/wilsontom/rawReadeR
 BugReports: https://github.com/wilsontom/rawReadeR/issues
